install( FILES accountActive.png
               accountNotActive.png
               button_whitelist.png
               button_blacklist.png
               mail-unread-new.png
               account.svgz
               trayIcon.png
               newMailPic.png
               deletedFilter.png
               deletedManual.png
               DESTINATION ${DATA_INSTALL_DIR}/kshowmail/pics )
